// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TaskDetails /> should render properly 1`] = `
.emotion-0 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: -4px;
  padding-right: 48px;
}

.emotion-4 {
  position: relative;
  height: 100%;
}

.emotion-5 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 0;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  width: 200px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 12px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  margin-bottom: 4px;
  color: #ffffff;
}

.emotion-5,
.emotion-5:hover,
.emotion-5:visited {
  background-color: #808080;
}

.emotion-5:hover {
  background-color: #b3b3b3;
}

.emotion-5[aria-disabled=true] {
  background-color: #808080;
}

.emotion-6 {
  position: absolute;
  z-index: 1;
  top: 100%;
  right: 0;
  background-color: #808080;
  border-radius: 2px;
  box-shadow: 0 4px 7px 0 #000000;
  min-width: 200px;
  font-family: Roboto,Avenir,"sans-serif";
}

.emotion-6 ul {
  list-style-type: none;
  padding: 0;
  padding-top: 4px;
  padding-bottom: 4px;
  margin: 0;
}

.emotion-6 li {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 0;
  padding: 8px 16px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-7:hover,
.emotion-7.focus-visible:focus,
.emotion-7 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #4a4a4a;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-right: 48px;
  padding-top: 12px;
  padding-bottom: 12px;
}

.emotion-9 {
  font-weight: 700;
  color: #ffffff;
  padding-bottom: 4px;
}

.emotion-10 {
  color: #b3b3b3;
}

<div
  className="emotion-0"
>
  <h3
    className="emotion-1"
  >
    Task: 
    Crawling files in 'gs://zorroa-dev-data'
  </h3>
  <div
    className="emotion-2"
  >
    <div
      className="emotion-3"
    >
      <div
        className="emotion-4"
      >
        <button
          aria-label="Toggle Dropdown Menu"
          className="emotion-5"
          onBlur={[Function]}
          onClick={[Function]}
          type="button"
        >
          Modify Task
          <svg
            data-file-name="chevron.svg"
            height={20}
          />
        </button>
        <div
          className="emotion-6"
        >
          <div>
            <ul>
              <li>
                <button
                  className="emotion-7"
                  onBlur={[Function]}
                  onClick={[Function]}
                  type="button"
                >
                  Retry
                </button>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      className="emotion-8"
    >
      <div
        className="emotion-9"
      >
        ID
        :
      </div>
      <div
        className="emotion-10"
      >
        5262c1ef-91ad-1d33-82b6-d6edb1b855c4
      </div>
    </div>
    <div
      className="emotion-8"
    >
      <div
        className="emotion-9"
      >
        State
        :
      </div>
      <div
        className="emotion-10"
      >
        Success
      </div>
    </div>
    <div
      className="emotion-8"
    >
      <div
        className="emotion-9"
      >
        Host
        :
      </div>
      <div
        className="emotion-10"
      >
        http://analyst-7b7fd7958-9zl69:5000
      </div>
    </div>
    <div
      className="emotion-8"
    >
      <div
        className="emotion-9"
      >
        Started
        :
      </div>
      <div
        className="emotion-10"
      >
        2020-03-05 22:31:18
      </div>
    </div>
    <div
      className="emotion-8"
    >
      <div
        className="emotion-9"
      >
        Duration
        :
      </div>
      <div
        className="emotion-10"
      >
        00h : 00m : 03s
      </div>
    </div>
  </div>
</div>
`;

exports[`<TaskDetails /> should render properly 2`] = `
.emotion-0 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #e3f7e8;
  border-radius: 2px;
  padding: 12px;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
  white-space: pre-line;
}

.emotion-4 a {
  color: #191919;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  margin-left: 4px;
}

.emotion-4 a:hover {
  color: #3A5DFF;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: -4px;
  padding-right: 48px;
}

.emotion-7 {
  position: relative;
  height: 100%;
}

.emotion-8 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 0;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  width: 200px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 12px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  margin-bottom: 4px;
  color: #ffffff;
}

.emotion-8,
.emotion-8:hover,
.emotion-8:visited {
  background-color: #808080;
}

.emotion-8:hover {
  background-color: #b3b3b3;
}

.emotion-8[aria-disabled=true] {
  background-color: #808080;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-right: 48px;
  padding-top: 12px;
  padding-bottom: 12px;
}

.emotion-10 {
  font-weight: 700;
  color: #ffffff;
  padding-bottom: 4px;
}

.emotion-11 {
  color: #b3b3b3;
}

<div
  className="emotion-0"
>
  <h3
    className="emotion-1"
  >
    Task: 
    Crawling files in 'gs://zorroa-dev-data'
  </h3>
  <div
    className="emotion-2"
  >
    <div
      className="emotion-3"
    >
      <svg
        color="#009f22"
        data-file-name="checkmark.svg"
        height={20}
      />
      <div
        className="emotion-4"
        role="alert"
      >
        Task has been retried successfully.
      </div>
    </div>
  </div>
  <div
    className="emotion-5"
  >
    <div
      className="emotion-6"
    >
      <div
        className="emotion-7"
      >
        <button
          aria-label="Toggle Dropdown Menu"
          className="emotion-8"
          onBlur={[Function]}
          onClick={[Function]}
          type="button"
        >
          Modify Task
          <svg
            data-file-name="chevron.svg"
            height={20}
          />
        </button>
      </div>
    </div>
    <div
      className="emotion-9"
    >
      <div
        className="emotion-10"
      >
        ID
        :
      </div>
      <div
        className="emotion-11"
      >
        5262c1ef-91ad-1d33-82b6-d6edb1b855c4
      </div>
    </div>
    <div
      className="emotion-9"
    >
      <div
        className="emotion-10"
      >
        State
        :
      </div>
      <div
        className="emotion-11"
      >
        Success
      </div>
    </div>
    <div
      className="emotion-9"
    >
      <div
        className="emotion-10"
      >
        Host
        :
      </div>
      <div
        className="emotion-11"
      >
        http://analyst-7b7fd7958-9zl69:5000
      </div>
    </div>
    <div
      className="emotion-9"
    >
      <div
        className="emotion-10"
      >
        Started
        :
      </div>
      <div
        className="emotion-11"
      >
        2020-03-05 22:31:18
      </div>
    </div>
    <div
      className="emotion-9"
    >
      <div
        className="emotion-10"
      >
        Duration
        :
      </div>
      <div
        className="emotion-11"
      >
        00h : 00m : 03s
      </div>
    </div>
  </div>
</div>
`;
